<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpWithEmailActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:ems="10"
            android:id="@+id/SignUpWithEmail_inputMailAddr"
            android:gravity="center" android:inputType="textEmailAddress"
            android:hint="@string/SignUpWithEmailActivity_inputMailAddrHint"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUpWithEmail_statusValueLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/SignUpWithEmail_inputPswd"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/SignUpWithEmail_inputPswd"
            android:gravity="center"
            android:hint="@string/SignUpWithEmailActivity_inputPswdHint"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUpWithEmail_inputMailAddr"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/SignUpWithEmail_signup"/>
    <Button
            android:text="@string/SignUpWithEmail_signupTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpWithEmail_signup"
            android:onClick="signUpWithEmailAddr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUpWithEmail_inputPswd"/>
    <TextView
            android:text="@string/SignUpWithEmail_statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpWithEmail_statusLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/SignUpWithEmail_statusValueLabel"/>
    <TextView
            android:text="@string/SignUpWithEmail_statusValueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpWithEmail_statusValueLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/SignUpWithEmail_statusLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/SignUpWithEmail_inputMailAddr"/>
</androidx.constraintlayout.widget.ConstraintLayout>